--- a/templates/scala.xml
+++ b/templates/scala.xml
@@ -1,5 +1,20 @@
 <templateSet group="scala">
-  <template name="fcc" value="final case class Dupa" description="final case class" toReformat="false" toShortenFQNames="true">
+  <template name="T" value="&lt;$TAG$&gt;$SELECTION$&lt;/$TAGNAME$&gt;&#10;" description="Surround with &lt;tag&gt;&lt;/tag&gt;" toReformat="true" toShortenFQNames="true">
+    <variable name="TAG" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="TAGNAME" expression="firstWord(TAG)" defaultValue="&quot;&quot;" alwaysStopAt="false" />
+    <context />
+  </template>
+  <template name="fcc" value="final case class $name$(value: $type$)" description="Template for final case class" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="CaseClass" alwaysStopAt="true" />
+    <variable name="type" expression="" defaultValue="String" alwaysStopAt="true" />
+    <context>
+      <option name="SCALA" value="true" />
+    </context>
+  </template>
+  <template name="enum" value="sealed trait $name$&#10;object $name$ {&#10;  case object $type1$ extends $name$&#10;  case object $type2$ extends $name$&#10;}" description="Template Enum for scala" toReformat="true" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="type1" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="type2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="SCALA" value="true" />
     </context>
